# dante-gemini-25

./: .gitignore  Makefile  README.md  check.py  convert.py  pyproject.toml
en/: inferno.md  paradiso.md  purgatorio.md
en/inferno/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt
en/paradiso/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt
en/purgatorio/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt
images/: README.md  banana.py  characters.txt  generate-image.py
it/: Makefile  inferno.jsonl  paradiso.jsonl  purgatorio.jsonl  segment_chapters.py  translate_segments.py
ja/: inferno.md  paradiso.md  purgatorio.md
ja/inferno/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt
ja/paradiso/: 01.txt  (+32 more)
(+33 files in other folders)
